[gd_scene load_steps=5 format=3 uid="uid://b6fxpji7pbhn5"]

[ext_resource type="Script" path="res://Assets/UI/NarrationBanner/narration_banner.gd" id="1_gaf1m"]
[ext_resource type="Texture2D" uid="uid://cdtlc1shid6b6" path="res://Assets/UI/Carved_3Slides.png" id="2_5oc8e"]
[ext_resource type="FontFile" uid="uid://b2l5jmu8eknaw" path="res://Assets/Font/Fool.ttf" id="3_msxbt"]

[sub_resource type="Theme" id="Theme_k0bb5"]
Label/colors/font_color = Color(0.319255, 0.319255, 0.319255, 1)
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("3_msxbt")

[node name="NarrationBanner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gaf1m")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_5oc8e")
patch_margin_left = 4
patch_margin_top = 6
patch_margin_right = 4
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -22.5
offset_right = 134.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_k0bb5")

[node name="NarrationLabel" type="Label" parent="NinePatchRect2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(740, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
horizontal_alignment = 1
autowrap_mode = 3

[node name="KeyDirectionLabel" type="Label" parent="NinePatchRect2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
